fin ex02 et ex04 + MAJ READEME + modif ex01